# lightweight-MNIST-OCR

./: .gitignore  CMakeLists.txt  README.md  compile.sh  main.cpp  setup.py
python/: cli.py  test.py  train.py
python/mnistocr.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/: bindings.cpp  bindings.cu  logistic.cpp  logistic.cu  logistic.h
